# GameEngine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
game_engine/components/: CBBox.cpp  CBBox.h  CName.cpp  CName.h  CShape.cpp  CShape.h  CTransform.cpp  CTransform.h
game_engine/engine/: Engine.cpp  Engine.h
game_engine/entities/: Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h
game_engine/systems/: SRender.cpp  SRender.h
